# wind-rust-api

./: Cargo.toml  README.md
src/: main.rs
src/controller/: mod.rs
src/db/: message_db.rs  mod.rs  user_db.rs
src/models/: message.rs  mod.rs  user.rs
src/service/: message_service.rs  user_service.rs
src/utils/: mod.rs
